force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Submit_Component__c/fields/sf_devops__Change_Submission__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Change_Submission__c</fullName>
    <description>The Change_Submission that we where committed on.</description>
    <label>Change Submission</label>
    <referenceTo>sf_devops__Change_Submission__c</referenceTo>
    <relationshipLabel>Submit Components</relationshipLabel>
    <relationshipName>Submit_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>