force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Submit_Component__c/fields/sf_devops__Empty__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Empty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, then this submit component did not actual make any changes to the version control system.</description>
    <label>Empty</label>
    <type>Checkbox</type>
</CustomField>