force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Submit_Component__c/fields/sf_devops__Operation__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Operation__c</fullName>
    <description>One of ADD, REMOVE or CHANGE that defines what operation was performed on this component.</description>
    <label>Operation</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>