force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Submit_Component__c/validationRules/sf_devops__File_Path.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__File_Path</fullName>
    <active>true</active>
    <description>A Submit Component cannot have its File_Path__c field changed after being set.</description>
    <errorConditionFormula>AND(ISCHANGED(sf_devops__File_Path__c),NOT(ISBLANK(PRIORVALUE(sf_devops__File_Path__c))))</errorConditionFormula>
    <errorMessage>A Submit Component cannot have its File_Path__c field changed once set.</errorMessage>
</ValidationRule>